# telegram-bot-api-schema

./: LICENSE  README.md  generate_schema.py  pyproject.toml  schema.json  telegram_bot_api.py
.github/workflows/: generate_schema.yml
