[tool.poetry]
name = "telegram-bot-api-schema"
version = "0.1.0"
description = ""
authors = ["Elias Kunnas <elias@kunnas.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
lxml = "^4.6.1"
cssselect = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
